<resources>
    <string name="app_name">Team21</string>
    <string name="team_21">Team 21</string>
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="eye_color">Eye Color:</string>
    <string name="hair_color">Hair Color:</string>
    <string name="population">Population:</string>
    <string name="surface_water">Surface Water:</string>
    <string name="orbital_period">Orbital Period:</string>
    <string name="nil_result_msg">Nothing found. Please try again.</string>
    <string name="channel_name">Team21 Channel</string>
    <string name="channel_description">Notification Channel When App Receives a Sticker/Application</string>
    <string name="channel_id">Sticker_Channel_ID</string>
    <string name="sticker_sent">Sticker Sent</string>
    <string name="stickers">Stickers</string>
    <string name="number_of_times_sent">Number of Times Sent</string>
    <string-array name="States">
        <item>AL</item>
        <item>AK</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string-array name="species">
        <item>Dog</item>
        <item>Cat</item>
        <item>Bird</item>
        <item>Rabbit</item>
        <item>Hamster</item>
        <item>Guinea pig</item>
        <item>Fish</item>
        <item>Reptiles</item>
        <item>Insects</item>
        <item>Other</item>

    </string-array>
    <string name="submit">Submit</string>
    <string name="email">e-mail:</string>
    <string name="password">password:</string>
    <string name="confirm_password">confirm password:</string>
    <string name="Log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="postTitle">TextView</string>
    <string name="APPLY">APPLY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_review"><u>Write Review</u></string>
    <string name="logout"><u>Logout</u></string>
    <string name="posts"><u>Posts</u></string>
    <string name="applications"><u>Applications</u></string>
    <string name="reviews"><u>Reviews</u></string>
    <string name="applied"><u>Applied</u></string>

</resources>