<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PurrfectSitter.Activities.LogInActivity">

 =     <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/et_title"
        app:layout_constraintEnd_toStartOf="@+id/et_title"
        app:layout_constraintTop_toTopOf="@+id/et_email" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="@+id/et_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_email"
        app:layout_constraintTop_toTopOf="@+id/et_title"
        app:layout_constraintVertical_bias="0.384" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:gravity="left"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/bt_login"
        app:layout_constraintEnd_toEndOf="@+id/bt_login"
        app:layout_constraintStart_toStartOf="@+id/bt_login" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="left"
        app:layout_constraintBottom_toTopOf="@+id/et_title"
        app:layout_constraintEnd_toEndOf="@+id/et_title" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_newAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />

   <TextView
       android:id="@+id/tv_forgot_password"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="32dp"
       android:clickable="true"
       android:minHeight="48dp"
       android:text="Forgot password"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/bt_newAccount" />
</androidx.constraintlayout.widget.ConstraintLayout>