<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/people_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@+id/imageViewName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/gender"
        app:layout_constraintStart_toEndOf="@+id/imageViewGender"
        app:layout_constraintTop_toBottomOf="@+id/people_name" />

    <TextView
        android:id="@+id/eye_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/hair_color"
        app:layout_constraintStart_toEndOf="@+id/imageViewHair"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <TextView
        android:id="@+id/hair_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/eye_color"
        app:layout_constraintStart_toEndOf="@+id/imageViewEye"
        app:layout_constraintTop_toBottomOf="@+id/eye_color" />

    <TextView
        android:id="@+id/tv_people_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="male"
        app:layout_constraintStart_toEndOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/tv_people_name" />

    <TextView
        android:id="@+id/tv_people_eye_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="blue"
        app:layout_constraintStart_toEndOf="@+id/hair_color"
        app:layout_constraintTop_toBottomOf="@+id/tv_people_hair_color" />

    <TextView
        android:id="@+id/tv_people_hair_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="blond"
        app:layout_constraintStart_toEndOf="@+id/eye_color"
        app:layout_constraintTop_toBottomOf="@+id/tv_people_gender" />

    <TextView
        android:id="@+id/tv_people_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:text="Luke Skywalker"
        app:layout_constraintStart_toEndOf="@+id/people_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewName"
        android:layout_width="29dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/name" />

    <ImageView
        android:id="@+id/imageViewGender"
        android:layout_width="29dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewName"
        app:srcCompat="@drawable/gender" />

    <ImageView
        android:id="@+id/imageViewHair"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGender"
        app:srcCompat="@drawable/hair" />

    <ImageView
        android:id="@+id/imageViewEye"
        android:layout_width="29dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHair"
        app:srcCompat="@drawable/eye" />

</androidx.constraintlayout.widget.ConstraintLayout>