<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="54dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:text="@string/logout"
        android:textSize="14sp"
        android:textColor="@color/firebrick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/bottom_nav_menu"/>


    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name_lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Name:"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_name_lab"
        app:layout_constraintStart_toEndOf="@id/tv_name_lab"
        app:layout_constraintTop_toTopOf="@id/tv_name_lab" />

    <TextView
        android:id="@+id/tv_pur_email_lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Email:"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_name_lab"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_lab" />

    <TextView
        android:id="@+id/tv_pur_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_pur_email_lab"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="@id/tv_pur_email_lab" />

    <TextView
        android:id="@+id/tv_as_host_lab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="#D0D0D0"
        android:paddingHorizontal="16dp"
        android:text="AS HOST"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pur_email_lab" />

    <TextView
        android:id="@+id/tv_pets_lab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#D0D0D0"
        android:paddingHorizontal="16dp"
        android:text="PETS"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#455A64"
        app:layout_constraintBottom_toTopOf="@+id/rv_pets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_applied" />


    <TextView
        android:id="@+id/tv_as_sitter_lab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#D0D0D0"
        android:paddingHorizontal="16dp"
        android:text="AS SITTER"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_application" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pets"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pets_lab" />

    <ImageView
        android:id="@+id/iv_edit"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pur_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_name"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/tv_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:text="@string/posts"
        app:layout_constraintEnd_toStartOf="@+id/tv_application"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_as_host_lab"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/applications"
        app:layout_constraintBottom_toBottomOf="@+id/tv_posts"
        app:layout_constraintEnd_toStartOf="@+id/tv_host_reviews"
        app:layout_constraintStart_toEndOf="@id/tv_posts"
        app:layout_constraintTop_toTopOf="@+id/tv_posts"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_host_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/reviews"
        app:layout_constraintBottom_toBottomOf="@+id/tv_application"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_application"
        app:layout_constraintTop_toTopOf="@+id/tv_application"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_applied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:text="@string/applied"
        app:layout_constraintEnd_toStartOf="@id/tv_sitter_reviews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_as_sitter_lab"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_sitter_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/reviews"
        app:layout_constraintBottom_toBottomOf="@+id/tv_applied"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_applied"
        app:layout_constraintTop_toTopOf="@+id/tv_applied"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/iv_add_pet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pets_lab"
        app:layout_constraintEnd_toEndOf="@id/tv_pets_lab"
        app:layout_constraintTop_toTopOf="@+id/tv_pets_lab"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>